<resources>
    <string name="app_name">Bloom</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up!</string>
    <string name="login">Login</string>
    <string name="stay_logged_in">Stay Logged in?</string>
    <string name="already_have_an_account_login">Already have an account? Login!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="select_date_of_birth">Select Date of Birth</string>
    <string name="email">Email</string>
    <string name="surname">Surname</string>
    <string name="first_name">First Name</string>
    <string name="achievements">Achievements</string>
    <string name="diary_entry">Diary Entry</string>
    <string name="select_mood">Select Mood:</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="happy">Happy</string>
    <string name="tell_me_about_your_day">Tell me about your day:</string>
    <string name="discuss_up_to_500_characters">Discuss up to 500 characters</string>
    <string name="create_classroom">Create Classroom</string>
    <string name="classroom_name">Classroom Name:</string>
    <string name="enter_classroom_name">Enter Classroom Name</string>
    <string name="add_student">Add Student</string>
    <string name="search">Search</string>
    <string name="add_teacher">Add Teacher</string>
    <string name="this_will_display_the_students_names">This will display the students names</string>
    <string name="this_will_display_the_teachers_names">This will display the teachers names</string>
    <string name="create">Create</string>
    <string name="diary">Diary</string>
    <string name="level">Level</string>
    <string name="weather">Weather</string>
    <string name="settings">Settings</string>s
    <string name="language">Language</string>
    <string name="share">Share</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="general">General</string>
    <string name="notifications">Notifications</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="afrikaans">Afrikaans</string>
    <string name="english">English</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
