<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cnb_unselectedColor="@android:color/black">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:cnb_backgroundColor="@color/colorPrimaryDark"
        app:cnb_iconColor="@color/cardView"
        android:fontFamily="@font/abeezee"
        android:textSize="18sp"/>

    <item
        android:id="@+id/nav_diary"
        android:icon="@drawable/ic_book"
        android:title="@string/diary"
        app:cnb_backgroundColor="@color/colorPrimaryDark"
        app:cnb_iconColor="@color/cardView"
        android:fontFamily="@font/abeezee"
        android:textSize="18sp"/>

    <item
        android:id="@+id/nav_achiv"
        android:icon="@drawable/ic_achiv"
        android:title="@string/achievements"
        app:cnb_backgroundColor="@color/colorPrimaryDark"
        app:cnb_iconColor="@color/cardView"
        android:fontFamily="@font/abeezee"
        android:textSize="18sp"/>

    <item
        android:id="@+id/nav_prof"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:cnb_backgroundColor="@color/colorPrimaryDark"
        app:cnb_iconColor="@color/cardView"
        android:fontFamily="@font/abeezee"
        android:textSize="18sp"/>


</menu>